--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -1,1 +1,4 @@
-<% include layout %> 
+<% include layout %>
+<body>
+<button onclick="window.location.href='/upload'" class="btn btn-primary">NEW POST</button>
+</body>
