--- a/app/views/layout.ejs
+++ b/app/views/layout.ejs
@@ -18,5 +18,6 @@
 		<a class="menu" href="/logout">Logout</a>
 		<%}else{%>
 			<a class="menu" href="/login">Login</a>
-		<%}%>		
+		<%}%>
+		<a class="menu" href="/myPost">My Pics</a>		
 	</header>
