--- a/app/views/layout.ejs
+++ b/app/views/layout.ejs
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-
 	<head>
 		<title>Voting-App</title>
 		
@@ -9,10 +8,20 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.1/angular.min.js"></script>
+  <script src="https://masonry.desandro.com/jquery.masonry.min.js"></script>
+	<script>
+	$( function() {
+  		$('#container').masonry({
+    	itemSelector: '.item',
+    	columnWidth: 800,
+  		});
+	});
+	</script>
 	</head>
 	
 	<header>
 		<p>Welcome, <span id="display-name"></span>!</p>
+		<a class="menu" href="/">Home</a>
 		<a class="menu" href="/profile">Profile</a>
 		<%if(new String(login).valueOf() == new String("true").valueOf()){%>
 		<a class="menu" href="/logout">Logout</a>
