--- a/public/css/main.css
+++ b/public/css/main.css
@@ -202,3 +202,22 @@ span {
 	display: inline;
 	margin: 0;
 }
+
+.item {
+  height:100px;
+  width:150px;
+  padding-top: 15px;
+  float: left;
+  margin: 5px;
+  background: #CCC;
+  border-radius: 5px;
+}
+.item:hover{
+	background: #FCC;
+}
+.item.w2{
+	height:300px;
+}
+#image{
+	border-radius: 5px;
+}
