ajax call to increase the value of the clicks

--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -6,8 +6,11 @@
 	</div>
 	<% posts.forEach(function(post){%>
 		<div class="item w2">
-			<p>post.name</p><br>
+			<p><%=post.name%></p><br>
 			<img src="<%=post.link%>" height="100px" width="100px">
+			<br>
+			<div id="'likes'<%=post._id%>"><%=post.likes%></div>
+			<span class="glyphicon glyphicon-heart" id="like" onclick="but('<%=post._id%>')"></span>
 		</div>
 	<%}) %>
 </div>
