--- a/app/views/mypost.ejs
+++ b/app/views/mypost.ejs
@@ -1,5 +1,12 @@
 <%include layout %>
 <body>
-
+	<% posts.forEach(function(post){%>
+		<div class="item w2">
+			<p><%=post.name%></p><br>
+			<img src="<%=post.link%>" height="100px" width="100px">
+			<br>
+			<span class="glyphicon glyphicon-heart" id="like" onclick="but()"></span>
+		</div>
+	<%}) %>
 </body>
 </html>
