--- a/app/views/layout.ejs
+++ b/app/views/layout.ejs
@@ -6,17 +6,10 @@
 		<link href="/public/css/main.css" rel="stylesheet" type="text/css">
 				<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/masonry/2.1.08/jquery.masonry.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.1/angular.min.js"></script>
-  <script src="https://masonry.desandro.com/jquery.masonry.min.js"></script>
-	<script>
-	$( function() {
-  		$('#container').masonry({
-    	itemSelector: '.item',
-    	columnWidth: 800,
-  		});
-	});
-	</script>
+  <script src="/public/js/main.js"></script>
 	</head>
 	
 	<header>
