added some more stuff

--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -9,7 +9,7 @@
 			<p><%=post.name%></p><br>
 			<img src="<%=post.link%>" height="100px" width="100px">
 			<br>
-			<div id="'likes'<%=post._id%>"><%=post.likes%></div>
+			<div id="likes<%=post._id%>"><%=post.likes%></div>
 			<span class="glyphicon glyphicon-heart" id="like" onclick="but('<%=post._id%>')"></span>
 		</div>
 	<%}) %>
