--- a/app/views/mypost.ejs
+++ b/app/views/mypost.ejs
@@ -3,7 +3,7 @@
 <div class="container">
 	<% posts.forEach(function(post){%>
 		<div class="item w2" id="div<%=post._id%>">
-			<span class="glyphicon glyphicon-remove" id="delete" onclick="delete('<%=post._id%>')"></span>
+			<span class="glyphicon glyphicon-remove" id="delete" onclick="del('<%=post._id%>')"></span>
 			<p><%=post.name%></p><br>
 			<img src="<%=post.link%>" height="100px" width="100px">
 			<br>
